# stapler-roles

./: .gitignore  Makefile  README.md  pyproject.toml
playbooks/: install-Tylers-MBP.local.yml  install-thesus.yml
roles/desktop-apps/defaults/: main.yml
roles/desktop-apps/tasks/: Archlinux.yml  Darwin.yml  main.yml
roles/desktop-apps/tests/: test.yml
roles/desktop-apps/vars/: Darwin.yaml
roles/development-environment/defaults/: main.yml
roles/development-environment/handlers/: main.yml
roles/development-environment/tasks/: Archlinux.yml  Darwin.yml  main.yml
roles/development-environment/tests/: test.yml
roles/development-environment/vars/: Archlinux.yml  Darwin.yml  main.yml
roles/shell-tools/: README.md
roles/shell-tools/defaults/: main.yml
roles/shell-tools/handlers/: main.yml
roles/shell-tools/tasks/: Archlinux.yml  main.yml
roles/shell-tools/tests/: test.yml
roles/shell-tools/vars/: Darwin.yml  main.yml
