[tool.poetry]
name = "stapler-roles"
version = "0.1.0"
description = ""
authors = ["Tyler Stapler <tystapler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
